<resources>
    <string name="app_name">One Touch</string>
    <string name="ultronHeading">ULTRON</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_board_details">Edit Board Details</string>
    <string name="ultron_test">Ultron Test</string>
    <string name="client_name">Client Name</string>
    <string name="ultron_technology">Ultron Technology</string>
    <string name="job_client">JOB/CLIENT</string>
    <string name="network">NETWORK</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="engineer_logout">LOG OUT</string>
    <string name="cancel2">Cancel</string>
    <string name="client_name2">Client Name</string>
    <string name="ultron_test2">Ultron Test</string>
    <string name="job_name2">Job Name</string>
    <string name="ultron_technology2">Ultron Technology</string>
    <string name="enabled">Enabled</string>
    <string name="cancel3">Cancel</string>
    <string name="update2">Update</string>
    <string name="higher">Higher</string>
    <string name="lower">Lower</string>
    <string name="close">Close</string>
    <string name="_30">30</string>
    <string name="loader">Loader</string>
    <string name="quieter">Quieter</string>
    <string name="close2">Close</string>
    <string name="app_heading">ULTRON</string>
    <string name="app_subHeading">Technologies</string>
    <string name="profile_name_hint">Enter your name</string>
    <string name="lift_name_hint">Enter lift name</string>
    <string name="card_status">Status</string>
    <string name="bluetooth_status">Bluetooth is available</string>
    <string name="stair_status">Stairlift</string>
    <string name="lift_status">View and edit lift details</string>
    <string name="find_lift_title">Find Lift</string>
    <string name="find_lift_desc">Search for a lift in range</string>
    <string name="search_status">Search for a lift in a range</string>
    <string name="profile_status">My Profile</string>
    <string name="details_status">Edit your profile details</string>
    <string name="engineer_logged_in_title">Engineer Logout</string>
    <string name="engineer_logged_out_title">Engineer Login</string>
    <string name="engineer_logged_in_desc">Logout of your account</string>
    <string name="engineer_logged_out_desc">Login as an engineer</string>
    <string name="enter_login">Enter your Engineer PIN code in the boxes below and then press \"Login"\ to continue</string>
    <string name="login">Login</string>
    <string name="Connect">Connect</string>
    <string name="btn_add_this_lift">Add this Lift</string>
    <string name="btn_back">BACK</string>
    <string name="device_title">Manage Lift</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_edit">Edit</string>
    <string name="device_connected">Connected</string>
    <string name="device_connected_no_auth">Not Authorised</string>
    <string name="device_connect_error">Problem Connecting</string>
    <string name="device_connect_retry">Retry Connect</string>
    <string name="device_not_connected">Not Connected</string>
    <string name="device_name">Your lift</string>
    <string name="engineer_detail">Engineer detail</string>
    <string name="model_name">S515</string>
    <string name="job_name">Job Name</string>
    <string name="job_not_configured">No Job Configured</string>
    <string name="client">Client Name</string>
    <string name="technology">Ultron Technologies</string>
    <string name="board">Board Capabilities</string>
    <string name="gsm">GSM</string>
    <string name="diagnose">Diagnostics</string>
    <string name="wifi">Wifi</string>
    <string name="ap">Wifi Ap</string>
    <string name="user_contact">User Contact Numbers</string>
    <string name="number">0394093409</string>
    <string name="callmade">0 call made</string>
    <string name="missing_number">No number specified</string>
    <string name="last_call">Last call n/a</string>
    <string name="disabled">Disabled</string>
    <string name="edit">Edit</string>
    <string name="andy">Andy</string>
    <string name="nonumber">No Number specified</string>
    <string name="rozers">The Rozzers</string>
    <string name="timeout">Dial Timeout</string>
    <string name="dial_timeout_title">Call Dial Timeout</string>
    <string name="second">(seconds)</string>
    <string name="thirty">30</string>
    <string name="three">3</string>
    <string name="one">1</string>
    <string name="volume">Volume</string>
    <string name="micro">Microphone Senstivity</string>
    <string name="callpress">Call Press Delay (seconds)</string>
    <string name="enterName">Enter the name you\'d\ like to use in the App</string>
    <string name="edit_sim_detail">Edit SIM Detail</string>
    <string name="preference_file_key">com.ultrontech.s515liftconfigure.PREFERENCES_KEY</string>
    <string name="permission_reason_dialog_title">Lifts</string>
    <string name="permission_reason_msg">Lifts App need location permission to find bluetooth enabled lifts.</string>
    <string name="add_lift_txt_lift_name">Savaria VLink</string>
    <string name="add_lift_txt_title">Enter the PIN number</string>
    <string name="add_lift_txt_desc">You need to enter the PIN number associated with this device to be able to connect and add it to your lift.</string>
    <string name="btn_remove">Remove</string>
    <string name="edit_lift_heading">What would you like to edit?</string>
    <string name="change_the_name">Change the name</string>
    <string name="disconnect_edit_lift">Disconnect</string>
    <string name="change_my_pin_number">Change my PIN number</string>
    <string name="no_pin_number_configured">No Pin number configured</string>
    <string name="pin_number_configured">You have a PIN number setup for this SIM card</string>
    <string name="you_have_made_no_calls">You have made no calls to configured numbers yet. You should make a test call to ensure correct operation of your sim card.</string>
    <string name="call_reminder_needed">It has been a while since your last call. You should make a test call to ensure correct operation of your SIM card</string>
    <string name="installer_provider">Installer Provider</string>
    <string name="sim_information">SIM Information</string>
    <string name="sim_status">SIM Status</string>
    <string name="gsm_network">Network</string>
    <string name="gsm_mobile_network_state">Mobile network state</string>
    <string name="gsm_service_state">Service state</string>
    <string name="gsm_ims_registration_status">IMS Registration Status</string>
    <string name="gsm_signal_strength">Signal Strength</string>
    <string name="gsm_mobile_network_type">Mobile Network Type</string>
    <string name="gsm_unknown">Unknown</string>
    <string name="gsm_dbm_format">%1$d dBm</string>
    <string name="current_lift_pin_number">Current lift PIN number</string>
    <string name="enter_the_new_pin_number">Enter the new PIN Number</string>
    <string name="pin_required">PIN Required</string>
    <string name="no_pin">No PIN</string>
    <string name="choose_pin_length">Choose Pin Length</string>
    <string name="choose_sim_pin">Choose SIM PIN</string>
    <string name="call_press_delay">Call Press Delay</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_my_products">MyProductsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_lift">"FIND NEW LIFT"</string>
    <string name="title_activity_user_lift_settings">UserLiftSettingsActivity</string>
    <string name="title_activity_change_sim_information">ChangeSimInformationActivity</string>
    <string name="account_name">Account Name</string>
    <string name="account">Account Lifts</string>
    <string name="language">Language</string>
    <string name="default_language">English</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="access_resources">Access Resources</string>
    <string name="welcome">WELCOME</string>
    <string name="user">User</string>
    <string name="engineer">Engineer</string>
    <string name="lifts_within_range">Lifts within Range</string>
    <string name="select_the_type_of_lift_you_are_linking">Select the type of lift you are linking</string>
    <string name="stairlift">Stairlift</string>
    <string name="vertical_lift">Vertical Lift</string>
    <string name="inclined_lift">Inclined Lift</string>
    <string name="elevator">Elevator</string>
    <string name="search">Search</string>
    <string name="engineer_board_details">Engineer/Board Details</string>
    <string name="no_ssid_configured">No SSID configured</string>
    <string name="wifi_is_available_on_device">Wifi is available on device</string>
    <string name="wifi_connected">Connected</string>
    <string name="wifi_is_not_connected">Not Connected</string>
    <string name="board_capabilities">Board Capabilities</string>
    <string name="firmware_revision">Firmware Revision</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="wifi_ap">Wifi AP</string>
    <string name="expressed_in_seconds_amount_of_time_needed_to_press_the_button_to_make_a_call">Expressed in seconds.Amount of time needed to press the button to make a call</string>
    <string name="confirm">Confirm</string>
    <string name="change_lift_name">Change Lift Name</string>
    <string name="new_name">New Name</string>
    <string name="change_lift_pin_number">Change Lift PIN Number</string>
    <string name="select_new_pin">Select New Pin</string>
    <string name="confirm_new_pin">Confirm New Pin</string>
    <string name="dial_timeout">Dial Timeout</string>
    <string name="expressed_in_seconds">Expressed in seconds</string>
    <string name="change_emergency_services_details">Change Emergency Services Details</string>
    <string name="phone">Phone</string>
    <string name="engineer_contact_details">Engineer Contact Details</string>
    <string name="enter_your_engineer_pin_code_in_the_box_below_press_login_to_continue">Enter your Engineer PIN code in the box below. Press Login to continue</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="disconnect_this_lift">DISCONNECT THIS LIFT</string>
    <string name="are_you_sure_you_want_to_disconnect_your_lift">Are you sure you want to disconnect your lift?</string>
    <string name="yes_i_m_sure">YES, I\'M SURE</string>
    <string name="remove_this_lift">REMOVE THIS LIFT</string>
    <string name="are_you_sure_you_want_to_remove_your_lift">Are you sure you want to remove your lift?</string>
    <string name="lift_name">Lift Name</string>
    <string name="lift_pin_number">Lift Pin Number</string>
    <string name="user_contact_detail">User Contact detail</string>
    <string name="emergency_service_details">Emergency Service Details</string>
    <string name="microphone_sensitivity">Microphone Sensitivity</string>
    <string name="choose_new_sim_pin">Choose New SIM PIN</string>
    <string name="choose_sim_style">Choose SIM Style</string>
    <string name="name">Name</string>
    <string name="wifi_ssid">Wifi SSID</string>
    <string name="wifi_ssid2">Wifi SSID</string>
    <string name="no_security">No\nSecurity</string>
    <string name="wep_wpa">WPA or WPA2 &amp; Password</string>
</resources>