<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
    <include
        android:id="@+id/toolbar"
        layout="@layout/user_header"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:padding="32dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_engineer_pin_code_in_the_box_below_press_login_to_continue"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp" />

    <EditText
        android:id="@+id/edit_text_engineer_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="20dp"
        android:hint="@string/enter_pin"
        android:textColorHint="@color/lightGrey"
        android:textColor="@color/black"
        android:fontFamily="@font/lato_regular"
        android:textSize="18sp"
        android:background="@drawable/edittext_outline" />


    <Button
        android:id="@+id/btn_engineer_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="60dp"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button_green_bg"
        app:backgroundTint="#99CC33"/>
    </LinearLayout>
</LinearLayout>
