<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp">
        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:paddingVertical="5dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/edit_grey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:textColor="@color/text_color_title"/>
    </LinearLayout>
    <TextView
        android:id="@+id/menu_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/access_resources"
        android:fontFamily="@font/lato_medium"
        android:textSize="20sp"
        android:textColor="@color/text_color_title"/>
    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/text_color_title"
        android:paddingVertical="15dp"
        android:visibility="gone">
        <TextView
            android:id="@+id/txt_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/engineer_logout"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>