<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ChangeEngineerContactActivity"
    android:background="@color/white">
    <include
        android:id="@+id/toolbar"
        layout="@layout/user_header"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="32dp"
        android:layout_below="@+id/toolbar">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/engineer_contact_details"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engineer_contact_details"
            android:textSize="18sp"
            android:gravity="center"
            android:fontFamily="@font/lato_bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/edt_engineer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"
            android:textColorHint="@color/lightGrey"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_outline" />
        <EditText
            android:id="@+id/edt_engineer_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/phone"
            android:textColorHint="@color/lightGrey"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:padding="12dp"
            android:background="@drawable/edittext_outline" />

        <Button
            android:id="@+id/btn_confirm_engineer_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="18sp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="60dp"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button_green_bg"
            app:backgroundTint="#99CC33"/>
    </LinearLayout>
    <include android:id="@+id/footer"
        layout="@layout/home_back_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"/>
    <include
        android:id="@+id/option_menu"
        layout="@layout/option_menu" />
</RelativeLayout>
